# CPlusPlus

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  rparser.cmake
cplusplus/: AST.h  ASTVisitor.h  ASTfwd.h  Bind.cpp
doc/: CppDocument.cpp  CppDocument.h  FastPreprocessor.cpp  FastPreprocessor.h
examples/simple/: main.cpp  simple.pro
examples/test/: main.cpp
pp/: Macro.cpp  Macro.h  PPToken.h  PreprocessorClient.cpp  PreprocessorClient.h  PreprocessorEnvironment.cpp  PreprocessorEnvironment.h  pp-engine.cpp  pp-engine.h
src/: CppPreprocessor.cpp  CppPreprocessor.h  main.cpp  qtcreatorlibrary.pri  src.pro
src/libs/: libs.pro
src/libs/cplusplus/: FindUsages.cpp  FindUsages.h  LookupContext.cpp  Makefile  cplusplus-lib.pri
src/libs/extensionsystem/: pluginmanager.cpp
src/libs/utils/: Makefile.process_stub  app_version.h
src/plugins/coreplugin/: Core.pluginspec
src/plugins/coreplugin/dialogs/: openwithdialog.cpp
src/plugins/coreplugin/editormanager/: editormanager.cpp
src/plugins/cpptools/: CppTools.pluginspec  ModelManagerInterface.cpp  ModelManagerInterface.h  builtinindexingsupport.cpp  cppfindreferences.cpp  cppfindreferences.h  cppindexingsupport.h  cppmodelmanager.cpp  cppmodelmanager.h  cpppreprocessor.cpp  cpppreprocessor.h  cpptools.pri  cpptoolsplugin.h  searchsymbols.cpp  searchsymbols.h
src/plugins/find/: Find.pluginspec  searchresultwidget.cpp  searchresultwindow.cpp
src/plugins/locator/: Locator.pluginspec
src/plugins/projectexplorer/: ProjectExplorer.pluginspec  codestylesettingspropertiespage.cpp  codestylesettingspropertiespage.h  editorsettingspropertiespage.cpp  editorsettingspropertiespage.h  processstep.h  projectexplorer.cpp  projectexplorersettingspage.h  sessiondialog.cpp  sessiondialog.h
src/plugins/texteditor/: TextEditor.pluginspec  basetextdocumentlayout.cpp  texteditorsettings.cpp  texteditorsettings.h
src/rparser/: rparser.cpp  rparser.h  rparser.pro
